force-app/main/default/objects/Trainer_Assignment__c/Trainer_Assignment__c.object-meta.xml
<CustomObject>
    <label>Trainer Assignment</label>
    <pluralLabel>Trainer Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <nameField>
        <label>Trainer Assignment Number</label>
        <type>AutoNumber</type>
        <displayFormat>TRA-{0000}</displayFormat>
    </nameField>
</CustomObject>