force-app/main/default/objects/Trainer_Assignment__c/fields/Assigned_On__c.field-meta.xml
<CustomField>
    <fullName>Assigned_On__c</fullName>
    <label>Assigned On</label>
    <type>Date</type>
</CustomField>