force-app/main/default/objects/Trainer_Assignment__c/fields/Membership__c.field-meta.xml
<CustomField>
    <fullName>Membership__c</fullName>
    <label>Membership</label>
    <type>MasterDetail</type>
    <referenceTo>Membership__c</referenceTo>
    <relationshipLabel>Trainer Assignments</relationshipLabel>
    <relationshipName>Trainer_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>