force-app/main/default/objects/Trainer_Assignment__c/fields/Trainer__c.field-meta.xml
<CustomField>
    <fullName>Trainer__c</fullName>
    <label>Trainer</label>
    <type>MasterDetail</type>
    <referenceTo>Trainer__c</referenceTo>
    <relationshipLabel>Trainer Assignments</relationshipLabel>
    <relationshipName>Trainer_Assignments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
</CustomField>